--- a/assinatura.html
+++ b/assinatura.html
@@ -12,7 +12,7 @@
             <table style=" color: #ffffff;">
                 <tr>
                     <td width="20">
-                        <img src="https://caiotguerra.github.io/grupooiticica/Vectortelefone.png" width="14px" height="14px">
+                        <img src="https://grupo-oiticica.github.io/Arquivos/iconetelefone.png" width="14px" height="14px">
                     </td>
                     <td style=" vertical-align:top;">
                         (21) 3394-3888
@@ -20,7 +20,7 @@
                 </tr>
                 <tr>
                     <td width="20">
-                        <img src="https://caiotguerra.github.io/grupooiticica/Vectorendereco.png" width="14px" height="18px">
+                        <img src="https://grupo-oiticica.github.io/Arquivos/iconeendereco.png" width="14px" height="18px">
                     </td>
                     <td>
                         R. Casa Nova, 115 - Campo Grande, RJ
@@ -29,7 +29,7 @@
             </table>
         </td>
         <td width="292">
-            <img src="https://caiotguerra.github.io/grupooiticica/Slice1fundo.png" style="width: 100%; height: 100%; object-fit: cover; vertical-align: bottom; text-align: right;" >
+            <img src="https://grupo-oiticica.github.io/Arquivos/Fundo.png" style="width: 100%; height: 100%; object-fit: cover; vertical-align: bottom; text-align: right;" >
         </td>
     </tr>
 </table>
