--- a/assinatura.html
+++ b/assinatura.html
@@ -1,6 +1,6 @@
-<table width="680" style="background-color:#0076CE; color:#ffffff; font-family: Arial, Helvetica, sans-serif; border-collapse: collapse; border: 0px;" cellspacing="0" cellpadding="0">
+<table maxwidth="680" style="background-color:#0076CE; color:#ffffff; font-family: Arial, Helvetica, sans-serif; border-collapse: collapse; border: 0px;" cellspacing="0" cellpadding="0">
     <tr>
-        <td style="padding: 0px 0px 0px 20px;" width="388">
+        <td style="padding: 0px 0px 0px 20px;" maxwidth="388">
             <span style="font-weight: bold; font-size: 25px; vertical-align: top; ">
                 Meu nome
             </span>
@@ -11,7 +11,7 @@
             <br>
             <table style=" color: #ffffff;">
                 <tr>
-                    <td width="20">
+                    <td maxwidth="20">
                         <img src="https://grupo-oiticica.github.io/Arquivos/iconetelefone.png" width="14px" height="14px">
                     </td>
                     <td style=" vertical-align:top;">
@@ -19,7 +19,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td width="20">
+                    <td maxwidth="20">
                         <img src="https://grupo-oiticica.github.io/Arquivos/iconeendereco.png" width="14px" height="18px">
                     </td>
                     <td>
@@ -28,7 +28,7 @@
                 </tr>
             </table>
         </td>
-        <td width="292">
+        <td maxwidth="292">
             <img src="https://grupo-oiticica.github.io/Arquivos/Fundo.png" style="width: 100%; height: 100%; object-fit: cover; vertical-align: bottom; text-align: right;" >
         </td>
     </tr>
