--- a/assinatura.html
+++ b/assinatura.html
@@ -1,4 +1,4 @@
-<table maxwidth="680" style="background-color:#0076CE; color:#ffffff; font-family: Arial, Helvetica, sans-serif; border-collapse: collapse; border: 0px;" cellspacing="0" cellpadding="0">
+<table width="680" style="background-color:#0076CE; color:#ffffff; font-family: Arial, Helvetica, sans-serif; border-collapse: collapse; border: 0px;" cellspacing="0" cellpadding="0">
     <tr>
         <td style="padding: 0px 0px 0px 20px;" maxwidth="388">
             <span style="font-weight: bold; font-size: 25px; vertical-align: top; ">
