--- a/assinatura.html
+++ b/assinatura.html
@@ -9,9 +9,9 @@
                 Cargo na empresa
             </span>
             <br>
-            <table style=" color: #ffffff;">
+            <table style="color: #ffffff;">
                 <tr>
-                    <td maxwidth="20">
+                    <td width="20">
                         <img src="https://grupo-oiticica.github.io/Arquivos/iconetelefone.png" width="14px" height="14px">
                     </td>
                     <td style=" vertical-align:top;">
@@ -19,7 +19,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td maxwidth="20">
+                    <td width="20">
                         <img src="https://grupo-oiticica.github.io/Arquivos/iconeendereco.png" width="14px" height="18px">
                     </td>
                     <td>
@@ -28,8 +28,8 @@
                 </tr>
             </table>
         </td>
-        <td maxwidth="292">
-            <img src="https://grupo-oiticica.github.io/Arquivos/Fundo.png" style="width: 100%; height: 100%; object-fit: cover; vertical-align: bottom; text-align: right;" >
+        <td width="292">
+            <img src="https://grupo-oiticica.github.io/Arquivos/Fundo.png" style="width: 92px; height: 169px; object-fit: cover; vertical-align: bottom; text-align: right;" >
         </td>
     </tr>
 </table>
